@@ -4,3 +4,4 @@ Mono.Tuner/RemoveSerialization.cs
 Mono.Tuner/AdjustVisibility.cs
 Mono.Tuner/CheckVisibility.cs
 Mono.Tuner/InjectSecurityAttributes.cs
+Mono.Tuner/MoonlightAssemblyStep.cs
